alert font-family 추가

--- a/윤서보경팀/3차과제/윤서/project/loginPage.css
+++ b/윤서보경팀/3차과제/윤서/project/loginPage.css
@@ -105,8 +105,8 @@ body {
     color: #E32929;
     font-size: 20px;
     line-height: 30px;
-    font-weight: 600;
-    /*font-family*/
+    font-weight: 400;
+    font-family: 'SUIT-Regular';
 }
 
 input {
