input password css 수정

--- a/윤서보경팀/3차과제/윤서/project/loginPage.css
+++ b/윤서보경팀/3차과제/윤서/project/loginPage.css
@@ -116,14 +116,18 @@ input {
     height: 67px;
     width: 45%;
     margin: 20px auto;
-    padding: 16px 122px;
+    padding: 16px 115px;
     display: block;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 700;
     line-height: 27px;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    transition: background-color 0.3s ease, outline 0.3s ease;
 }
-
+input[type="password"]{
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+}
 input::placeholder {
     color: #757575;
     font-size: 18px;
